fix vertical scroll on mobile

--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@
     src: url('font/opificio/Opificio_Bold_rounded.ttf')
 }
 
-body {
+html, body {
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .container-fluid{
